<resources>
    <string name="app_name">HouseBuyingAndRentingApp</string>
    <string name="action_settings">Settings</string>

    <string name="price">$12,000</string>
    <string name="west_minster_london">West minster, London</string>
    <string name="sq_ft">3200 sqft</string>
    <string name="no_of_bed_rooms">4 bed rooms</string>
    <string name="search_box_hint">type your location address</string>
    <string name="top_collection">Top Collection</string>
    <string name="near_me">Near me</string>
    <string name="low_to_high_price">Low to high price</string>
    <string name="no_of_favourite">324 favourite</string>
    <string name="no_of_reviews">23 Reviews</string>
    <string name="see_review">See Review</string>
    <string name="see_photos">See Photos</string>
    <string name="single_family_house">Single Family House</string>
    <string name="single_family_house_detail">nostrud exercitation ullamco laboris nisi aliquip ex\n
                        ea commodo consequat.Duis aute irure dolor in \n
                        reprehenderit in voluptate velit esse cillum dolore eu\n
                        fugiat nulla pariatur.Excepteur sint occaecat\n
                        nostrud exercitation ullamco laboris nisi aliquip ex\n
                        ea commodo consequat.Duis aute irure dolor in \n
                        reprehenderit in voluptate velit esse cillum dolore eu\n
                        fugiat nulla pariatur.Excepteur sint occaecat\n
                        nostrud exercitation ullamco laboris nisi aliquip ex\n
                        ea commodo consequat.Duis aute irure dolor in \n
                        reprehenderit in voluptate velit esse cillum dolore eu\n
                        fugiat nulla pariatur.Excepteur sint occaecat
    </string>
    
    <string name="add_fav">Add Favourite</string>
    <string name="book_now">Book Now</string>
</resources>
