<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_search"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search"
                android:layout_width="288dp"
                android:layout_height="wrap_content"
                app:queryHint="@string/search_box_hint"
                app:iconifiedByDefault="false" />

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/iv_view_stream_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_view_stream_black_24dp"
            android:layout_toEndOf="@+id/cv_search"
            android:layout_alignTop="@+id/cv_search"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"/>

        <ImageView
            android:id="@+id/iv_view_stream_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_view_week_black_24dp"
            android:layout_toEndOf="@+id/iv_view_stream_horizontal"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_alignTop="@id/iv_view_stream_horizontal"/>

        <ImageView
            android:id="@+id/iv_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_help_black_24dp"
            android:layout_toEndOf="@+id/iv_view_stream_vertical"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_alignTop="@+id/iv_view_stream_vertical"/>

        <LinearLayout
            android:id="@+id/ll_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv_search"
            android:layout_alignStart="@+id/cv_search"
            android:layout_marginTop="@dimen/margin_xxlarge"
            android:orientation="horizontal"
            android:weightSum="3">

            <RelativeLayout
                android:id="@+id/rl_top_collection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2">

                <TextView
                    android:id="@+id/tv_top_collection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top_collection"
                    android:textSize="@dimen/text_regular_3x"
                    android:textStyle="bold"
                    android:textColor="@color/primary_text"
                    />

                <ImageView
                    android:id="@+id/iv_selected_sign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_brightness_1_black_24dp"
                    android:layout_below="@+id/tv_top_collection"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_near_me"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/near_me"
                android:layout_weight="0.8"
                android:paddingStart="@dimen/margin_medium_2"/>

            <TextView
                android:id="@+id/tv_low_to_high_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/low_to_high_price"
                android:layout_weight="1"/>

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_top_collection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_menu"
            android:layout_marginTop="@dimen/margin_medium"/>

        <!--<com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"/>
-->
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>